trunk/Archive2/99/8c14a2c5217f75/output
main.cpp: In function 'int main()':
main.cpp:31:9: error: expected ';' before '}' token
         } else {
         ^
